<resources>
    <string name="app_name">RunningApp</string>
    <string name="title_activity_maps">RunningApp</string>

    <string name="time"> Time: </string>
    <string name="timeZero"> 00:00:00</string>

    <string name="distance">Distance: </string>
    <string name="distanceZero"> 0,00</string>
    <string name="KM">KM</string>

    <string name="avgSpeed">Speed: </string>
    <string name="kmh">KM/H</string>
    <string name="speedZero"> 0</string>

    <string name="buttonStart">Start</string>
    <string name="buttonStop">Stop</string>

    <string name="buttonViewData">View Data</string>
    <string name="buttonCloseData">Close</string>
</resources>
